waybar: fix clock spacing and color change

--- a/home/window-managers/hyprland/waybar/style.css
+++ b/home/window-managers/hyprland/waybar/style.css
@@ -37,7 +37,7 @@ tooltip {
 }
 
 #clock {
-  color: @peach;
+  color: @maroon;
 }
 
 #custom-weather {
